--- a/index.html
+++ b/index.html
@@ -164,17 +164,16 @@ document.addEventListener('DOMContentLoaded',async()=>{
 });
 
 /* ---------- Time-zone helpers ---------- */
-function getSelectedOffset(){
-  const loc=locationCache[locSel.value];
-  if(!loc||loc.timezone===undefined||loc.timezone===null||loc.timezone==='')return 0;
-  return parseInt(loc.timezone,10)||0;         // hours offset from UTC
+function getSelectedOffset(){              /* hours offset from UTC, e.g.  -8, 0, +2 */
+  const loc = locationCache[locSel.value];
+  if(!loc || loc.timezone==null || loc.timezone==='') return 0;
+  return parseInt(loc.timezone,10) || 0;
 }
+/*  true “today” in the location’s own time-zone, using pure UTC as a base  */
 function todayForLoc(){
-  const offset=getSelectedOffset();            // hours
-  const now=new Date();
-  const utcMillis=now.getTime()+now.getTimezoneOffset()*60000;
-  const locMillis=utcMillis+offset*3600000;
-  return new Date(locMillis).toISOString().split('T')[0];
+  const offset = getSelectedOffset();      /* hours */
+  const locMillis = Date.now() + offset*3_600_000;   /* 1 h = 3 600 000 ms */
+  return new Date(locMillis).toISOString().slice(0,10);
 }
 
 /* ---------- Other helpers ---------- */
